--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,15 @@
-/* * {
-  padding: 0px;
-  margin: 0;
-  box-sizing: border-box;
-} */
 
 #header {
-    background-image: linear-gradient(rgba(8, 1, 42, 0.5), rgba(176, 161, 161, 0.5)), url('https://www.cincinnati.com/gcdn/presto/2023/02/07/USAT/754c2509-2219-4dbf-990d-65b6df148e95-presto_Jeremy_Freeman_-_Animal_Planet__Wolfie_and_Bleu.jpg?crop=1911,1075,x8,y0&width=1911&height=1075&format=pjpg&auto=webp');
+    background-image: linear-gradient( 135deg, #00000069 8%, #f4f1f86b 100%), url('https://www.cincinnati.com/gcdn/presto/2023/02/07/USAT/754c2509-2219-4dbf-990d-65b6df148e95-presto_Jeremy_Freeman_-_Animal_Planet__Wolfie_and_Bleu.jpg?crop=1911,1075,x8,y0&width=1911&height=1075&format=pjpg&auto=webp');
     background-size: cover;
     background-position: center;
     text-align: center;
     padding: 30px;
-    border-radius: 5px;
+    border-radius: 5px 5px 60px 60px;
+    margin-left:auto;
+    
   }
+
   
 #header h1 {
     color: white;
@@ -31,27 +29,54 @@ body {
 
 h2 {
   color: #333;
-  font-size: 20px;
+  font-family: arial black;
+  letter-spacing: 3px;
+  text-shadow: 3px 1px 4px #9a9b9b;
+  font-size: 30px;
   margin-bottom: 10px;
 }
+
+ .player-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+}
+
 
 .player-card {
   background-color: #fff;
   border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   padding: 20px;
   margin-bottom: 20px;
-  box-shadow: 5px 5px 15px gray
+  box-shadow: 5px 5px 20px rgb(175, 174, 174);
+ 
+}
+
+.player-image {
+  max-width: 35%;
+  max-height: 35%;
+  border-radius: 5px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 
 }
 
 .player-card p {
   margin: 10px 0;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+} 
+.player-details {
+  display: none;
 }
 
 .details-button,
 .remove-button {
   background-color: #007bff;
   color: #fff;
+  width: 100%;
   border: none;
   border-radius: 4px;
   padding: 8px 12px;
@@ -71,6 +96,8 @@ h2 {
     width: 100vw;
     padding: 10px;
   }
+
+  
   
   #new-player-form-container {
     margin-bottom: 20px;
@@ -83,7 +110,7 @@ h2 {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 10px;
-    max-width: 400px; /* Optional: Limit the maximum width of the form */
+    max-width: 400px; 
   }
 
 #new-player-form-container label {
