--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,27 @@
 #header {
-    background-image: linear-gradient( 135deg, #00000069 8%, #f4f1f86b 100%), url('https://www.cincinnati.com/gcdn/presto/2023/02/07/USAT/754c2509-2219-4dbf-990d-65b6df148e95-presto_Jeremy_Freeman_-_Animal_Planet__Wolfie_and_Bleu.jpg?crop=1911,1075,x8,y0&width=1911&height=1075&format=pjpg&auto=webp');
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    padding: 30px;
-    border-radius: 5px 5px 60px 60px;
-    margin-left:auto;
-    
-  }
+  background-image: linear-gradient(135deg, #00000069 8%, #f4f1f86b 100%),
+    url("https://www.cincinnati.com/gcdn/presto/2023/02/07/USAT/754c2509-2219-4dbf-990d-65b6df148e95-presto_Jeremy_Freeman_-_Animal_Planet__Wolfie_and_Bleu.jpg?crop=1911,1075,x8,y0&width=1911&height=1075&format=pjpg&auto=webp");
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  padding: 30px;
+  border-radius: 5px 5px 60px 60px;
+  margin-left: auto;
+}
 
-  
 #header h1 {
-    color: white;
-    font-size: 3em;
-    font-family: Arial black, sans-serif;
-    letter-spacing: 5px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-    
-  }
-  
+  color: white;
+  font-size: 3em;
+  font-family: Arial black, sans-serif;
+  letter-spacing: 5px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #f2f2f2;
   margin: 0;
+}
 * {
   padding: 0;
   margin: 0;
@@ -44,12 +43,11 @@ h2 {
   margin-bottom: 10px;
 }
 
- .player-container {
+.player-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
-
 
 .player-card {
   background-color: #fff;
@@ -61,7 +59,6 @@ h2 {
   padding: 20px;
   margin-bottom: 20px;
   box-shadow: 5px 5px 20px rgb(175, 174, 174);
- 
 }
 
 .player-image {
@@ -69,7 +66,6 @@ h2 {
   max-height: 35%;
   border-radius: 5px;
   box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
-
 
   font-size: 20px;
   margin-bottom: 10px;
@@ -84,11 +80,10 @@ h2 {
 
 .player-card p {
   margin: 10px 0;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-} 
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 .player-details {
   display: none;
-
 }
 
 .details-button,
@@ -108,29 +103,27 @@ h2 {
   background-color: #0056b3;
 }
 
-  #new-player-form {
-    display: grid;
-    grid-gap: 10px;
-    place-items: center;
-    width: 100vw;
-    padding: 10px;
-  }
+#new-player-form {
+  display: grid;
+  grid-gap: 10px;
+  place-items: center;
+  width: 100vw;
+  padding: 10px;
+}
 
-  
-  
-  #new-player-form-container {
-    margin-bottom: 20px;
-    padding: 20px;
-    display: grid;
-    place-items: center;
-  }
-  
-  #new-player-form-container form {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 10px;
-    max-width: 400px; 
-  }
+#new-player-form-container {
+  margin-bottom: 20px;
+  padding: 20px;
+  display: grid;
+  place-items: center;
+}
+
+#new-player-form-container form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 10px;
+  max-width: 400px;
+}
 
 #new-player-form-container label {
   margin-bottom: 10px;
@@ -139,6 +132,8 @@ h2 {
 #new-player-form-container input {
   padding: 8px;
   margin-bottom: 10px;
+}
+
 #new-player-form-container {
   margin-bottom: 20px;
 }
@@ -151,7 +146,6 @@ h2 {
 #new-player-form-container input {
   margin-bottom: 10px;
   padding: 8px;
-
 }
 
 #new-player-form-container button[type="submit"] {
@@ -161,7 +155,6 @@ h2 {
 #new-player-form-container button[type="submit"]:hover {
   background-color: #1e7e34;
 }
-
 
 #new-player-form-container .form-field {
   display: flex;
@@ -176,5 +169,3 @@ h2 {
 #new-player-form-container .form-field input {
   padding: 8px;
 }
-
-
