--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ body {
 }
 
 .player-card {
+  height: 25%;
+  width: 30%;
   background-color: #d6d5d5;
   border-radius: 4px;
   display: flex;
@@ -73,7 +75,7 @@ body {
 .remove-button {
   background-color: #007bff;
   color: #fff;
-  width: 30%;
+  width: 75%;
   border: none;
   border-radius: 4px;
   padding: 8px 12px;
