--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
 #header {
   background-image: linear-gradient(135deg, #00000069 8%, #f4f1f86b 100%),
     url("https://thumbor.forbes.com/thumbor/fit-in/900x510/https://www.forbes.com/advisor/wp-content/uploads/2021/03/dog-group.jpg");
-  background-size: cover;
+  background-size: contain;
   background-position: center;
   text-align: center;
   padding: 30px;
@@ -40,8 +40,7 @@ body {
 }
 
 .player-card {
-  height: 25%;
-  width: 30%;
+  height: 25%px;
   background-color: #d6d5d5;
   border-radius: 4px;
   display: flex;
@@ -75,7 +74,7 @@ body {
 .remove-button {
   background-color: #007bff;
   color: #fff;
-  width: 75%;
+  width: 30%;
   border: none;
   border-radius: 4px;
   padding: 8px 12px;
