--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,3 @@
-/* Global Styles */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  margin: 0;
-  padding: 20px;
-}
-
-/* Header Styles */
 #header {
   background-image: linear-gradient(135deg, #00000069 8%, #f4f1f86b 100%),
     url("https://thumbor.forbes.com/thumbor/fit-in/900x510/https://www.forbes.com/advisor/wp-content/uploads/2021/03/dog-group.jpg");
@@ -24,24 +9,44 @@ body {
 }
 
 #header h1 {
-  color: #f8f2f2;
+  color: rgb(248, 242, 242);
   font-size: 3em;
-  font-family: "Arial Black", sans-serif;
+  font-family: Arial black, sans-serif;
   letter-spacing: 5px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-/* Player Card Styles */
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  margin: 0;
+  padding: 20px;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+h2 {
+  color: #333;
+  font-family: arial black;
+  letter-spacing: 3px;
+  text-shadow: 3px 1px 4px #9a9b9b;
+  font-size: 30px;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
 .player-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
 
 .player-card {
-  height: 25%px;
-  background-color: #d6d5d5;
+  width: 40%;
+  background-color: #f8f4f4;
   border-radius: 4px;
   display: flex;
   flex-direction: column;
@@ -49,32 +54,35 @@ body {
   align-items: center;
   padding: 20px;
   margin-bottom: 20px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 5px 5px 20px rgb(175, 174, 174);
 }
 
 .player-image {
-  max-width: 100%;
-  max-height: 200px;
-  object-fit: cover;
+  max-width: 35%;
+  max-height: 35%;
   border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+
+  font-size: 20px;
+  margin-bottom: 10px;
 }
 
 .player-card p {
   margin: 10px 0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-
 .player-details {
+  display: none;
   color: #b30000;
-  font-style: italic;
+  text-align: center;
+  text-transform: capitalize;
 }
 
 .details-button,
 .remove-button {
   background-color: #007bff;
   color: #fff;
-  width: 30%;
+  width: 50%;
   border: none;
   border-radius: 4px;
   padding: 8px 12px;
@@ -87,24 +95,28 @@ body {
   background-color: #b30000;
 }
 
-/* New Player Form Styles */
 #new-player-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  grid-gap: 10px;
+  place-items: center;
+  width: 100vw;
   padding: 10px;
 }
 
 #new-player-form-container {
   margin-bottom: 20px;
   padding: 20px;
+  display: grid;
+  place-items: center;
 }
 
 #new-player-form-container form {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 3fr;
   grid-gap: 10px;
   max-width: 400px;
+  display: flex;
+  flex-direction: column;
 }
 
 #new-player-form-container label {
@@ -116,12 +128,12 @@ body {
   margin-bottom: 10px;
 }
 
+#new-player-form-container {
+  margin-bottom: 20px;
+}
+
 #new-player-form-container button[type="submit"] {
   background-color: #28a745;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 8px 12px;
 }
 
 #new-player-form-container button[type="submit"]:hover {
