--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,8 @@ h2 {
 #all-players-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 }
 
 .player-card {
