--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ h2 {
 
 .player-card {
   width: 40%;
-  background-color: #f8f4f4;
+  background: url(https://img.freepik.com/free-photo/top-view-background-beautiful-white-grey-brown-cream-blue-background_140725-72219.jpg);
   border-radius: 4px;
   display: flex;
   flex-direction: column;
